Preparing release 1.3.33 (update to NB 9)

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,7 +1,15 @@
+debug.modulepath=\
+    ${run.modulepath}
+debug.test.modulepath=\
+    ${run.test.modulepath}
 #Tue Jan 19 22:16:38 EST 2016
 excludes=
 javac.deprecation=true
 build.test.results.dir=${build.dir}/test/results
+javac.modulepath=
+javac.processormodulepath=
+javac.test.modulepath=\
+    ${javac.modulepath}
 project.JMapProjLib=../JMapProjLib
 reference.JMapProjLib.jar=${project.JMapProjLib}/dist/JMapProjLib.jar
 run.classpath=\
@@ -10,6 +18,8 @@ run.classpath=\
 javadoc.nonavbar=false
 javac.external.vm=false
 file.reference.jai_imageio.jar=lib/jai_imageio.jar
+run.modulepath=\
+    ${javac.modulepath}
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
@@ -21,6 +31,8 @@ javadoc.noindex=false
 javadoc.additionalparam=
 includes=**
 build.classes.dir=${build.dir}/classes
+run.test.modulepath=\
+    ${javac.test.modulepath}
 source.encoding=x-MacRoman
 javadoc.author=true
 test.src.dir=test
